--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -279,7 +279,7 @@ But some care is needed when handling negations. Consider:
 If we let the \TFL-sentence `$H$' symbolise  `Jane is happy', then we can symbolise sentence \ref{not6} as `$H$'. However, it would be a mistake in general to symbolise sentence \ref{not7} with `$\enot{H}$'. If Jane is unhappy, then she is not happy; but sentence \ref{not7} does not mean the same thing as `It is not the case that Jane is happy'. Jane might be neither happy nor unhappy; she might be in a state of blank indifference. In order to symbolise sentence \ref{not7}, then, we will typically want to introduce a new atomic sentence of \TFL. Nevertheless, there may be limited circumstances where it doesn't matter which of these non-synonymous ways to deny `Jane is happy' I adopt.
 
 Sometimes a sentence will include a negative for literary effect, even though what is expressed isn't negative. Consider \begin{earg}
-	\item I don't like cricket; I love it!
+	\item[\ex{sc.imp}] I don't like cricket; I love it!
 \end{earg} The first clause seems negative, but the speaker confounds the hearer's expectation by going on to assert something even more positive than mere liking. Here the first clause really means something like `I don't merely like cricket' – what is denied is that the speaker's affection for cricket is limited to mere liking.\footnote{Technically, the negation here targets not the content of the clause, but the typical expectation that a cooperative speaker who says `I like X' is communicating that liking is the highest point on the scale of affection their attitude to X reaches. These `scalar implicatures' are discussed at length in Larry Horn, \emph{A Natural History of Negation}, University of Chicago Press, 1989, p. 382.}
 
 \section{Conjunction}\label{s:ConnectiveConjunction}
@@ -309,9 +309,9 @@ Sentence \ref{and4} is obviously a conjunction. The sentence says two things (ab
 
 Sentence \ref{and5} says one thing about two different subjects. It says of both Barbara and Adam that they are athletic, and in English we use the word `athletic' only once. The sentence can be paraphrased as `Barbara is athletic, and Adam is athletic'. We can symbolise this in \TFL\ as `$(B\eand A)$', using the same symbolisation key that we have been using.
 
-Sentence \ref{and6} is slightly more complicated. The word `although' sets up a contrast between the first part of the sentence and the second part. Nevertheless, the sentence tells us both that Barbara is energetic and that she is not athletic. In order to make each of the conjuncts an atomic sentence, we need to replace `she' with `Barbara'. So we can paraphrase sentence \ref{and6} as, `\emph{Both} Barbara is energetic, \emph{and} Barbara is not athletic'. The second conjunct contains a negation, so we paraphrase further: `\emph{Both} Barbara is energetic \emph{and} \emph{it is not the case that} Barbara is athletic'. And now we can symbolise this with the \TFL\ sentence `$(E\eand\enot B)$'. Note that we have lost all sorts of nuance in this symbolisation. There is a distinct difference in tone between sentence \ref{and6} and `Both Barbara is energetic and it is not the case that Barbara is athletic'. \TFL\ does not (and cannot) preserve these nuances.
+Sentence \ref{and6} is slightly more complicated. The word `although' sets up a contrast between the first part of the sentence and the second part. Nevertheless, the sentence tells us both that Barbara is energetic and that she is not athletic. In order to make each of the conjuncts an atomic sentence, we need to replace `she' with `Barbara'. So we can paraphrase sentence \ref{and6} as, `\emph{Both} Barbara is energetic, \emph{and} Barbara is not athletic'. The second conjunct contains a negation, so we paraphrase further: `\emph{Both} Barbara is energetic \emph{and} \emph{it is not the case that} Barbara is athletic'. And now we can symbolise this with the \TFL\ sentence `$(E\eand\enot B)$'. Note that we have lost all sorts of nuance in this symbolisation. There is a distinct difference in tone between sentence \ref{and6} and `Both Barbara is energetic and it is not the case that Barbara is athletic'. \TFL\ does not (and cannot) preserve these nuances. 
 
-Sentence \ref{and7} raises similar issues. There is a contrastive structure, but this is not something that \TFL\ can deal with. So we can paraphrase the sentence as `\emph{Both} Adam is athletic, \emph{and} Barbara is more athletic than Adam'. (Notice that we once again replace the pronoun `him' with `Adam'.) How should we deal with the second conjunct? We already have the sentence letter `$A$', which is being used to symbolise `Adam is athletic', and the sentence `$B$' which is being used to symbolise `Barbara is athletic'; but neither of these concerns their relative `athleticity'. So, to to symbolise the entire sentence, we need a new sentence letter. Let the \TFL\ sentence `$R$' symbolise the English sentence `Barbara is more athletic than Adam'. Now we can symbolise sentence \ref{and7} by `$(A \eand R)$'.
+Sentence \ref{and7} raises similar issues. There is a contrastive structure.  The speaker who asserts it means something by that ‘but’ — something to the effect of there being a contrast between those two features. But their brief utterance doesn’t tell exactly which contrast is intended. These contrasts are not something that \TFL\ is designed to deal with. So we can paraphrase the sentence as `\emph{Both} Adam is athletic, \emph{and} Barbara is more athletic than Adam'. (Notice that we once again replace the pronoun `him' with `Adam'.) How should we deal with the second conjunct? We already have the sentence letter `$A$', which is being used to symbolise `Adam is athletic', and the sentence `$B$' which is being used to symbolise `Barbara is athletic'; but neither of these concerns their relative `athleticity'. So, to to symbolise the entire sentence, we need a new sentence letter. Let the \TFL\ sentence `$R$' symbolise the English sentence `Barbara is more athletic than Adam'. Now we can symbolise sentence \ref{and7} by `$(A \eand R)$'.
 	\factoidbox{
 		A sentence can be symbolised as $(\meta{A}\eand\meta{B})$ if it can be paraphrased in English as `Both …, and …', or as `…, but …', or as `although …, …'.
 	}
@@ -386,7 +386,7 @@ Let's use the following symbolisation key:
 	\end{ekey}
 Sentence \ref{if1} is roughly of this form: `if P, then F'. We will use the symbol `\eif' to symbolise this `if …, then …' structure. So we symbolise sentence \ref{if1} by `$(P\eif F)$'. The connective is called \define{the conditional}. Here, `$P$' is called the \define{antecedent} of the conditional `$(P \eif F)$', and `$F$' is called the \define{consequent}.
 
-Sentence \ref{if2} is also a conditional. Since the word `if' appears in the second half of the sentence, it might be tempting to symbolise this in the same way as sentence \ref{if1}. That would be a mistake. My knowledge of geography tells me that sentence \ref{if1} is unproblematically true: there is no way for Jean to be in Paris that doesn't involve Jean being in France. But sentence \ref{if2} is not so straightforward: were  Jean in Dijon, Marseilles, or Toulouse, Jean would be in France without being in Paris, thereby rendering sentence \ref{if2} false. Since geography alone dictates the truth of sentence \ref{if1}, whereas travel plans (say) are needed to know the truth of sentence \ref{if2}, they must mean different things.
+Sentence \ref{if2} is also a conditional. Since the word `if' appears in the second half of the sentence, it might be tempting to symbolise this in the same way as sentence \ref{if1}. That would be a mistake. My knowledge of geography tells me that sentence \ref{if1} is unproblematically true: there is no way for Jean to be in Paris that doesn't involve Jean being in France. But sentence \ref{if2} is not so straightforward: were Jean in Dijon, Marseilles, or Toulouse, Jean would be in France without being in Paris, thereby rendering sentence \ref{if2} false. Since geography alone dictates the truth of sentence \ref{if1}, whereas travel plans (say) are needed to know the truth of sentence \ref{if2}, they must mean different things.
 
 In fact, sentence \ref{if2} can be paraphrased as `If Jean is in France, then Jean is in Paris'. So we can symbolise it by `$(F \eif P)$'.
 	\factoidbox{
@@ -464,6 +464,7 @@ We should not take `unless' to always have the stronger biconditional form. Cons
 	\item \TFL\ features five connectives: `$\eand$' (`and'), `$\eor$' (`or'), `$\enot$' (`not'), `$\eif$' (`if …, then …') and `$\eiff$' (`if and only if' or `iff').
 	\item These connectives, alone and in combination, can be used to symbolise many English constructions, even some which do not feature the English counterparts of the connectives – as when we approached the symbolisation of sentences involving `unless'.
 	\item Figuring out how to symbolise a given natural language sentence might not be straightforward, however, as in the cases of `A if B' and `A only if B', which have quite different symbolisations into \TFL. `A unless B' is perhaps even trickier, being sometimes used ambiguously by English speakers and being able to be symbolised in many good ways.
+	\item What matters in symbolisation is that the `spirit' of the argument is preserved and modelled appropriately, not that every nuance of meaning is preserved.
 }
 
 
