--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -3,13 +3,35 @@
 \label{ch.TruthTables}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
 
- 
 
 
 \chapter{Truth-Functional Connectives}\label{s:TruthFunctionality}
 
-\section{The idea of truth-functionality}
+\section{Functions}
+
 So much for the grammar or syntax of \TFL. We turn now to the meaning of \TFL\ sentences. For technical reasons, it is best to  start with the intended intepretation of the connectives. 
+
+As a preliminary, we need to have the concept of a (mathematical) \define{function}. Frequently, we refer to things not by name, but by the relations they have to other things. You can refer to Barack Obama by name, but one could equally refer to him in relation to his role, as `the 44th President of the United States', or in relation to his family, as `the husband of Michelle and father of Malia and Sasha'. These kinds of referring expressions are known as \emph{descriptions}, and we will look at them in more detail in §\ref{subsec.defdesc}. Our interest in them now is in the relations they involve. Barack Obama is denoted by `the biological father of Malia Obama' or `the biological father of Sasha Obama', in relation to his children. But we can consider `the biological father of …' in relation to other individuals: so `the biological father of Baron' denotes Trump, `the biological father of Daisy Turnbull' denotes Malcolm Turnbull, and so on. We can summarise this information in a table like this: 
+\begin{center}
+\begin{tabular}{c|c} \toprule 
+Input & `the biological father of …'\\
+\midrule
+Malia Obama & Barack \\
+Sasha Obama & Barack \\
+Baron Trump & Donald\\
+Daisy Turnbull & Malcolm\\
+… & … \\ \bottomrule
+\end{tabular}
+\end{center} In this table we have an \emph{input}, on the left, which is related to the \emph{output} on the right. The relation which maps the things in the left column to their corresponding outputs on the right is known as a \define{function} – in this case, the `biological father of' function. More precisely, a function is a relation between the members of a set $A$ and a set $B$ (which may be the same as $A$), such that each input to the function is a member of $A$, each output of the function is a member of $B$, and, crucially, each member of $A$ is associated with at most one member of $B$. So `the biological father of … ' is a function from the set of people (living or dead) to itself, and associates each person with their biological father. We implicitly that `biological father' permits each person to be associated with a unique father. If we consider other notions of fatherhood, such as \emph{paternal figure}, those would not yield a function, because many people have two or more paternal figures in their lives. Note that while everyone is associated with a unique biological father by this function (no input is associated with more than one output), the converse does not hold: some outputs are linked to more than one input, in fact, every father with more than one child.
+
+Common examples of functions occur in mathematics: we can consider the function `the sum of $x$ and $y$', which takes two numbers as input, and spits out their unique sum, $x+y$. This is again a function from a set to itself, this time the set of integers. There are functions which are from one set to another: consider, `the number of …'s children', which is a function from people to numbers, mapping each person to the number of children they have. (Even if they have more than one child, there is still a unique number characterising how many they have, and that is what this function spits out.) There are functions which do not associate an output with every input: consider `the eldest child of', which associates each parent with their first-born child, but doesn't associate non-parents with anything. There are many relations which are not functions. While Barack Obama can be chatacrerised as `the father of Malia', Malia Obama cannot be characterised as `the child of Barack', since that attempted description would apply equally to her sister.  
+
+\section{The idea of truth-functionality}
+
+The relevance of the notion of a function is that we are going to identify the meanings of the \TFL\ sentence connectives with a certain class of functions. The main property we are concerned with in \TFL\ that is associated with the meaning of a sentence is its truth-value, true or false (see §\ref{s:valuations}). \TFL\ is a logic of sentences, which allows us to construct complex sentences from smaller constituents together with a sentence connective. And the meanings of the sentence connectives are going to allow us to determine the truth-value of a complex sentence as a product of the truth values of its constituent sentences and the sentence connective involved. 
+
+XXX
+
 
 I want to start by introducing an important idea about sentence connectives.
 	\factoidbox{\label{def.truthfunction}
